# finance

./: finance.ipynb  pyproject.toml
finance/: sample.py  values.py  workbook.ipynb
resources/: Investing.com-ETFs-23-Oct-2024.csv  MW-BSE-ETF-23-Oct-2024.csv  MW-NSE-ETF-23-Oct-2024.csv  etf.2024.10.20.md  etf.2024.10.24.csv  stock.2024.10.20.md
tests/: finance_test.py
